[tool.poetry]
name = "tmorse"
version = "0.1.0"
description = "Blinking Morse code on Thinkpad LEDs"
authors = ["Mahyar Mahdavi <Mahyar@Mahyar24.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
mypy = "^0.910"
pylint = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
